--- a/index.html
+++ b/index.html
@@ -6,23 +6,22 @@
   <meta name="keywords" content="site, keywords, go, here">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <title>CHANGE_THE_TITLE</title>
-
+  <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <div class="site-container">
     <header class="site-header">
-      <h1>Site title – whoop!</h1>
     </header>
     <main class="site-content">
-      <div id='#foo'></div>
+      <ul id='filmList'>
+      </ul>
     </main>
     <footer class="site-footer">
-      &copy; CHANGE_THE_YEAR
     </footer>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script type="text/javascript" /src="js/main.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
